--- a/style.css
+++ b/style.css
@@ -344,6 +344,7 @@ hr {
   }
   hr {
     margin: 60px auto;
+    width: 70%;
     border-top: 2px solid rgba(255, 255, 255, 0.1);
   }
   .view-all-btn {
