--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ html {
   transition: color 0s;
   z-index: 1;
   border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
 }
 .btn:hover {
   color: #fff;
@@ -85,8 +87,6 @@ html {
 }
 .cta-btn {
   margin-top: 30px;
-  background-color: #dd0000;
-  color: #fff;
 }
 .hero-content-right {
   width: 50%;
@@ -113,15 +113,16 @@ html {
   gap: 30px;
   background-color: #000;
   padding: 30px;
-  width: 22%;
+  width: 25%;
   border-radius: 10px;
 }
-.featured-left .btn:last-child {
+.btn-active {
   background-color: #dd0000;
   color: #fff;
+  /* display: inline-block; */
 }
 .featured-right {
-  width: 78%;
+  width: 75%;
   position: relative;
 }
 .featured-right-grid {
@@ -146,6 +147,10 @@ html {
   padding: 5px 15px;
   transition: color 0.8s;
   margin-top: 15px;
+  font-size: 14px;
+}
+.btn-transfer:hover {
+  border: 1px solid #bd0303;
 }
 .tittle {
   font-size: 18px;
@@ -213,7 +218,13 @@ hr {
   gap: 50px;
 }
 
+/* Styles for upcoming page  */
+.match-content-box {
+  text-align: center;
+  padding: 50px;
+}
 /* Responsive Media Queries */
+/* ------Medium Devices------- */
 @media (max-width: 992px) {
   .hero-content {
     padding: 0;
@@ -249,16 +260,14 @@ hr {
     justify-content: center;
     background-color: rgba(255, 255, 255, 0);
     padding: 0;
+    /* margin: 0 50px; */
   }
   .featured-left .btn {
-    flex-grow: 1;
-    flex-basis: 0;
     background-color: rgba(255, 255, 255, 0);
     border: 1px solid #e8e8e8;
+    flex-grow: 1;
   }
-  .featured-left .btn:last-child {
-    border: 0;
-  }
+
   .featured-right {
     width: 100%;
   }
@@ -268,8 +277,15 @@ hr {
   .blog:nth-last-child(-n + 3) {
     display: none;
   }
+  .btn-active {
+    background-color: #dd0000 !important;
+    color: #fff;
+  }
   .view-all-btn {
     display: block;
+  }
+  .btn-cta {
+    display: inline-block;
   }
 }
 /* ------Small Devices------- */
@@ -298,16 +314,12 @@ hr {
     width: 75%;
     margin-bottom: -7px;
   }
-
-  .cta-btn {
-    display: inline-block;
-  }
   .featured-section {
     margin-top: 0px;
   }
   .featured-flex {
     flex-direction: column;
-    margin: 0;
+    margin: 0 20px;
   }
   /* .featured-left {
     flex-direction: row;
@@ -320,6 +332,7 @@ hr {
     padding: 0;
     width: 100%;
     background-color: #fff;
+    /* margin: 0 50px; */
   }
   .featured-left .btn {
     margin: 30px auto;
@@ -327,12 +340,8 @@ hr {
     border: 1px solid #e8e8e8;
   }
 
-  .featured-left .btn:last-child {
-    border: 0;
-  }
   .featured-right {
     width: 100%;
-    padding: 20px;
   }
   .featured-right-grid {
     grid-template-columns: repeat(1, 1fr);
@@ -353,68 +362,3 @@ hr {
     display: none;
   }
 }
-/* ------Medium Devices------- */
-/* @media (max-width: 992px) {
-  .hero-content {
-    padding: 0;
-    align-items: center;
-    margin: 0 50px;
-  }
-  .hero-content-left {
-    height: auto;
-    padding: 60px 10px;
-    padding-left: 70px;
-  }
-  .primary-header {
-    font-size: 36px;
-    line-height: normal;
-  }
-  .hero-content-right img {
-    width: 100%;
-    margin-bottom: -7px;
-  }
-  .hero-content-right {
-    align-self: end;
-  }
-  .featured-section {
-    margin: 70px auto;
-  }
-  .featured-flex {
-    flex-direction: column;
-    margin: 0 50px;
-  }
-  .featured-left {
-    width: 100%;
-    flex-direction: row;
-    justify-content: center;
-    background-color: rgba(255, 255, 255, 0);
-    padding: 0;
-  }
-  .featured-left .btn {
-    flex-grow: 1;
-    flex-basis: 0;
-    background-color: rgba(255, 255, 255, 0);
-    border: 1px solid #e8e8e8;
-  }
-  .featured-left .btn:last-child {
-    border: 0;
-  }
-  .featured-right {
-    width: 100%;
-  }
-  .featured-right-grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .blog:nth-last-child(-n + 3) {
-    display: none;
-  }
-  .view-all-btn {
-    background-color: #dd0000;
-    color: #fff;
-    align-self: center;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-top: 50px;
-    display: block;
-  }
-} */
