--- a/style.css
+++ b/style.css
@@ -138,6 +138,9 @@ html {
   /* height: 100%; */
   width: 100%;
 }
+.blog img {
+  border-radius: 5px 5px 0px 0px;
+}
 .featured-items-content {
   padding: 0px 20px 20px 20px;
 }
